[package]
name = "hybrid_encryption"
version = "0.1.0"
edition = "2024"

[dependencies]
# aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev="5ab621579c37c30d9443539ab7aff6f617a21369"}
hex = "0.4"
aes = "0.8.1"
aes-gcm = "0.10.0-pre"
aes-kw = { version = "0.2.1", features = ["alloc"] }
base64 = "0.13.0"
block-modes = "0.9.1"
cbc = { version = "0.1.2", features = ["alloc"] }
const-oid = "0.9.0"
ctr = "0.9.1"
# deno_core = { version = "0.140.0", path = "../../core" }
# deno_web = { version = "0.89.0", path = "../web" }
elliptic-curve = { version = "0.12.1", features = ["std", "pem"] }
num-traits = "0.2.14"
once_cell = "1.10.0"
p256 = { version = "0.11.1", features = ["ecdh"] }
p384 = "0.11.1"
rand = "0.8.4"
ring = { version = "0.16.20", features = ["std"] }
rsa = { version = "0.7.0-pre", default-features = false, features = ["std"] }
sec1 = "0.3.0"
serde = { version = "1.0.129", features = ["derive"] }
serde_bytes = "0.11"
sha-1 = "0.10.0"
sha2 = "0.10.2"
spki = "0.6.0"
tokio = { version = "1.17", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4"] }