[package]
name = "hybrid_encryption"
version = "0.1.0"
edition = "2024"

[dependencies]
# aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev="5ab621579c37c30d9443539ab7aff6f617a21369"}
# https://github.com/RustCrypto/RSA
# rsa = "0.9.8"
aes = "0.8.1"
aes-gcm = "0.10.0-pre"
cbc = { version = "0.1.2", features = ["alloc"] }
ctr = "0.9.1"
hex = "0.4"
rand = "0.8.4"
rsa = { version = "0.9", features = ["serde", "sha2", "std"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_test = "1.0"

